tests/lean/letArrowOutsideDo.lean.expected.out
letArrowOutsideDo.lean:2:8: error: expected ':=' or '|'
